changed grey bg color variable to match what is in amrketing style guide and fixing missing space

--- a/app/assets/stylesheets/v3/layout/variables.scss
+++ b/app/assets/stylesheets/v3/layout/variables.scss
@@ -50,7 +50,7 @@ $blue-main-brand--lighter: #bdd3e5;
 $bg-blue-light: #ddeaf3;
 $bg-grey-lightest: #f4f4f4;
 $bg-grey-lighter: #e5e5e5;
-$bg-grey-light: #dbdbdb;
+$bg-grey-light: #d4d4d4;
 $bg-grey-dark: $black;
 
 /* Text Colours */
